fix "Upgrade to Pro" text alignment is postion is faulty

--- a/assets/css/pro-popup.css
+++ b/assets/css/pro-popup.css
@@ -67,13 +67,14 @@
     background: #000000;
     border-radius: 5px;
     padding: 15px 20px 25px;
-    width: 261px;
-    height: 276px;
+    width: 300px;
+    height: 315px;
     position: absolute;
     margin-top: 11px;
     left: 30px;
     top: -30px;
     z-index: 99; /*It's 99, coz dropdown has maybe 98*/
+    box-sizing: border-box;
 }
 
 .erp-pro-tooltip-wrapper .erp-pro-tooltip-inner:before {
@@ -117,20 +118,28 @@
 
 .erp-pro-tooltip-wrapper .tooltip-btn {
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 .erp-pro-tooltip-wrapper .tooltip-btn[class] .tooltip_button {
-    background: #FF9000;
-    box-shadow: 0px 5px 10px rgb(0 0 0 / 25%);
     border-radius: 5px;
     text-align: center;
     color: #fff;
     width: 164px !important;
-    height: 35px !important;
-    display: inline-block;
+    height: 36px !important;
     align-items: center;
     justify-content: center;
-    padding: 0 15px 10px;
+    padding: 0 !important;
     line-height: 45px !important;
+
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+
+    position: absolute;
+
+    background: #FF9000;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
 }
 
 .pro-popup-body{
